{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 137,
  "lineage": "fbb5fa78-6a3a-622c-e3cd-8a858e5f8895",
  "resources": [
    {
      "module": "module.ec2-deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_aws_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:535002884759:instance/i-007f519def449baaf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007f519def449baaf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systemadminkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0beada1e569fe7624",
            "private_dns": "ip-10-0-3-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.69",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb2e35e33f1c7fb1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd98426f5abcb510",
            "tags": {
              "Environment": "production",
              "Name": "deen-server01"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-server01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2e59f11cda9b2a0"
            ]
          },
          "dependencies": [
            "module.vpc-deployment.aws_security_group.tf_aws_sg",
            "module.vpc-deployment.aws_subnet.tf_aws_private_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:535002884759:instance/i-065bb4c92682f2fbb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065bb4c92682f2fbb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systemadminkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0400c0fcc62ac3920",
            "private_dns": "ip-10-0-4-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.117",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-057b78704d94c8257",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-055375e5ba917a205",
            "tags": {
              "Environment": "production",
              "Name": "deen-server02"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-server02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2e59f11cda9b2a0"
            ]
          },
          "dependencies": [
            "module.vpc-deployment.aws_security_group.tf_aws_sg",
            "module.vpc-deployment.aws_subnet.tf_aws_private_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_aws_public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:535002884759:instance/i-09f6211120d845456",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f6211120d845456",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systemadminkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-022b768e99d760d03",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-54-204-91-203.compute-1.amazonaws.com",
            "public_ip": "54.204.91.203",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f1fd90f9adb38e2e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058e435d3863552ae",
            "tags": {
              "Environment": "production",
              "Name": "deen-server01"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-server01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2e59f11cda9b2a0"
            ]
          },
          "dependencies": [
            "module.vpc-deployment.aws_security_group.tf_aws_sg",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:535002884759:instance/i-0956ed7a546627812",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0956ed7a546627812",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systemadminkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8f10cd00109dd88",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "public_dns": "ec2-13-217-7-5.compute-1.amazonaws.com",
            "public_ip": "13.217.7.5",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e1d15e7429204136",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5b7a9bfe1a4bf7e",
            "tags": {
              "Environment": "production",
              "Name": "deen-server02"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-server02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2e59f11cda9b2a0"
            ]
          },
          "dependencies": [
            "module.vpc-deployment.aws_security_group.tf_aws_sg",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_aws_elasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084ff64c01df62013",
            "arn": "arn:aws:ec2:us-east-1:535002884759:elastic-ip/eipalloc-084ff64c01df62013",
            "domain": "vpc",
            "id": "eipalloc-084ff64c01df62013",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-219-30.compute-1.amazonaws.com",
            "public_ip": "34.194.219.30",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-eip-1"
            }
          },
          "dependencies": [
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c60ab1fce6a34d0",
            "arn": "arn:aws:ec2:us-east-1:535002884759:elastic-ip/eipalloc-02c60ab1fce6a34d0",
            "domain": "vpc",
            "id": "eipalloc-02c60ab1fce6a34d0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-229-212-73.compute-1.amazonaws.com",
            "public_ip": "3.229.212.73",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-eip-2"
            }
          },
          "dependencies": [
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_aws_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:internet-gateway/igw-06207a2c886edb3ff",
            "id": "igw-06207a2c886edb3ff",
            "owner_id": "535002884759",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-igw"
            },
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "dependencies": [
            "module.vpc-deployment.aws_vpc.tf_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_aws_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084ff64c01df62013",
            "association_id": "eipassoc-050408fd942707423",
            "connectivity_type": "public",
            "id": "nat-00849bba0f4b8ab74",
            "network_interface_id": "eni-0db1fce1893de8232",
            "private_ip": "10.0.1.185",
            "public_ip": "34.194.219.30",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-058e435d3863552ae",
            "tags": {
              "Environment": "production",
              "Name": "deen-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc-deployment.aws_eip.tf_aws_elasticIP",
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c60ab1fce6a34d0",
            "association_id": "eipassoc-051a2a81a579fcdcb",
            "connectivity_type": "public",
            "id": "nat-00e016b4dd2dcd0ee",
            "network_interface_id": "eni-08394f59710de1491",
            "private_ip": "10.0.2.102",
            "public_ip": "3.229.212.73",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b5b7a9bfe1a4bf7e",
            "tags": {
              "Environment": "production",
              "Name": "deen-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-nat-gateway-2"
            }
          },
          "dependencies": [
            "module.vpc-deployment.aws_eip.tf_aws_elasticIP",
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "tf_aws_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:network-acl/acl-07fa076251653605b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07fa076251653605b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "535002884759",
            "region": "us-east-1",
            "subnet_ids": [],
            "tags": {
              "Name": "deen-nacl",
              "environment": "production"
            },
            "tags_all": {
              "Name": "deen-nacl",
              "environment": "production"
            },
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-deployment.aws_vpc.tf_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "tf_aws_nacl_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02c8913607d00e9aa",
            "network_acl_id": "acl-07fa076251653605b",
            "region": "us-east-1",
            "subnet_id": "subnet-0dd98426f5abcb510"
          },
          "dependencies": [
            "module.vpc-deployment.aws_network_acl.tf_aws_nacl",
            "module.vpc-deployment.aws_subnet.tf_aws_private_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0072ac0bb419d821d",
            "network_acl_id": "acl-07fa076251653605b",
            "region": "us-east-1",
            "subnet_id": "subnet-055375e5ba917a205"
          },
          "dependencies": [
            "module.vpc-deployment.aws_network_acl.tf_aws_nacl",
            "module.vpc-deployment.aws_subnet.tf_aws_private_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "tf_aws_nacl_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04dfb71bc8d6d8c96",
            "network_acl_id": "acl-07fa076251653605b",
            "region": "us-east-1",
            "subnet_id": "subnet-058e435d3863552ae"
          },
          "dependencies": [
            "module.vpc-deployment.aws_network_acl.tf_aws_nacl",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f31fe2843255352c",
            "network_acl_id": "acl-07fa076251653605b",
            "region": "us-east-1",
            "subnet_id": "subnet-0b5b7a9bfe1a4bf7e"
          },
          "dependencies": [
            "module.vpc-deployment.aws_network_acl.tf_aws_nacl",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_aws_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:route-table/rtb-02b2fee142ca5ab8d",
            "id": "rtb-02b2fee142ca5ab8d",
            "owner_id": "535002884759",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00849bba0f4b8ab74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "deen-private-route-table1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-private-route-table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-deployment.aws_eip.tf_aws_elasticIP",
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_nat_gateway.tf_aws_nat_gateway",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:route-table/rtb-09767036a21a8a4e7",
            "id": "rtb-09767036a21a8a4e7",
            "owner_id": "535002884759",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00e016b4dd2dcd0ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "deen-private-route-table2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-private-route-table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-deployment.aws_eip.tf_aws_elasticIP",
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_nat_gateway.tf_aws_nat_gateway",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_aws_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:route-table/rtb-07330cdf645912c08",
            "id": "rtb-07330cdf645912c08",
            "owner_id": "535002884759",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06207a2c886edb3ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "deen-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a1eeb2ef0d9f2b3",
            "region": "us-east-1",
            "route_table_id": "rtb-02b2fee142ca5ab8d",
            "subnet_id": "subnet-0dd98426f5abcb510"
          },
          "dependencies": [
            "module.vpc-deployment.aws_eip.tf_aws_elasticIP",
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_nat_gateway.tf_aws_nat_gateway",
            "module.vpc-deployment.aws_route_table.tf_aws_private_route_table",
            "module.vpc-deployment.aws_subnet.tf_aws_private_subnet",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0748c0d6137c1e6fb",
            "region": "us-east-1",
            "route_table_id": "rtb-09767036a21a8a4e7",
            "subnet_id": "subnet-055375e5ba917a205"
          },
          "dependencies": [
            "module.vpc-deployment.aws_eip.tf_aws_elasticIP",
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_nat_gateway.tf_aws_nat_gateway",
            "module.vpc-deployment.aws_route_table.tf_aws_private_route_table",
            "module.vpc-deployment.aws_subnet.tf_aws_private_subnet",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deac7bbe826853f8",
            "region": "us-east-1",
            "route_table_id": "rtb-07330cdf645912c08",
            "subnet_id": "subnet-058e435d3863552ae"
          },
          "dependencies": [
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_route_table.tf_aws_public_route_table",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06518d4752b70e56c",
            "region": "us-east-1",
            "route_table_id": "rtb-07330cdf645912c08",
            "subnet_id": "subnet-0b5b7a9bfe1a4bf7e"
          },
          "dependencies": [
            "module.vpc-deployment.aws_internet_gateway.tf_aws_igw",
            "module.vpc-deployment.aws_route_table.tf_aws_public_route_table",
            "module.vpc-deployment.aws_subnet.tf_aws_public_subnet",
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_aws_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:security-group/sg-0d2e59f11cda9b2a0",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2e59f11cda9b2a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "deen-sg",
            "name_prefix": "",
            "owner_id": "535002884759",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "deen-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-deployment.aws_vpc.tf_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_aws_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:subnet/subnet-0dd98426f5abcb510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd98426f5abcb510",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002884759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-private-subnet-1-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-private-subnet-1-us-east-1a"
            },
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "dependencies": [
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:subnet/subnet-055375e5ba917a205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055375e5ba917a205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002884759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-private-subnet-2-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-private-subnet-2-us-east-1b"
            },
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "dependencies": [
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_aws_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:subnet/subnet-058e435d3863552ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058e435d3863552ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002884759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-public-subnet-1-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-public-subnet-1-us-east-1a"
            },
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "dependencies": [
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:subnet/subnet-0b5b7a9bfe1a4bf7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5b7a9bfe1a4bf7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002884759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-public-subnet-2-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-public-subnet-2-us-east-1b"
            },
            "vpc_id": "vpc-02ca0ba85838364a4"
          },
          "dependencies": [
            "module.vpc-deployment.aws_vpc.tf_aws_vpc",
            "module.vpc-deployment.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-deployment",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002884759:vpc/vpc-02ca0ba85838364a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04acb98b326b3ddb8",
            "default_route_table_id": "rtb-03d723ba5b8692542",
            "default_security_group_id": "sg-0457820e40092b320",
            "dhcp_options_id": "dopt-09e3400a5e6686666",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ca0ba85838364a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d723ba5b8692542",
            "owner_id": "535002884759",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "deen-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "deen-vpc"
            }
          }
        }
      ]
    }
  ]
}